force-app/main/default/objects/Task_Ray_Details__c/Task_Ray_Details__c.object-meta.xml
<CustomObject>
    <label>TaskRay Detail</label>
    <nameField>
        <displayFormat>TRD-{0000}</displayFormat>
        <label>Task Ray Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TaskRay Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>