force-app/main/default/objects/Task_Ray_Details__c/fields/Implementation_Type_Test__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Type_Test__c</fullName>
    <label>Implementation Type Test</label>
    <type>TextArea</type>
</CustomField>