force-app/main/default/objects/Task_Ray_Details__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <formula>TaskRay_Project__r.CreatedBy.FirstName + &quot; &quot; + TaskRay_Project__r.CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Manager</label>
    <type>Text</type>
</CustomField>