force-app/main/default/objects/Task_Ray_Details__c/fields/RAG_Status__c.field-meta.xml
<CustomField>
    <fullName>RAG_Status__c</fullName>
    <formula>TEXT(TaskRay_Project__r.RAG_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RAG Status</label>
    <type>Text</type>
</CustomField>