force-app/main/default/objects/Task_Ray_Details__c/fields/TaskRay_Project__c.field-meta.xml
<CustomField>
    <fullName>TaskRay_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TaskRay Project</label>
    <referenceTo>TASKRAY__Project__c</referenceTo>
    <relationshipName>Task_Ray_Details</relationshipName>
    <type>Lookup</type>
</CustomField>